- adjusted layout for the display of irclogs on our website - removed some unnecessary files from docs / at-dev - added creep7 to authors list

--- a/doc/AUTHORS.txt
+++ b/doc/AUTHORS.txt
@@ -13,71 +13,75 @@ For the project history visit:
 
 Clansuite is developed by:
 
-=========================================================================================================
+========================================================================================================================
 #  Name                       Nick              Email                           Time/Action GNA-History
    Position
-=========================================================================================================
+========================================================================================================================
 
 1  Jens-André Koch            vain              jakoch@web.de
 
-   Founder & Headdeveloper                                                      project founder (2005)
+   Founder & Headdeveloper .................................................... project founder (2005)
 									                                            (+) joined 18.05.2006
-   Maintainer & Benevolent Dictator                                             (+) 28.01.2008
+   Maintainer & Benevolent Dictator ........................................... (+) 28.01.2008
 
----------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------
 
 2  Florian Wolf               xsign             xsign.dll@clansuite.com
 
-   Headdeveloper                                                                (+) GNA Added User 19.05.2006 vain
+   Headdeveloper .............................................................. (+) GNA Added User 19.05.2006 vain
                                                                                     break from 05.2007 on
                                                                                 (-) left 15.10.2007
                                                                                 (-) GNA Removed User 28.01.2008 vain
                                                                                     joined Clansphere Project
-   Developer / Serveradministration                                             (+) GNA Added User 04.04.2008 vain
+   Developer / Serveradministration ........................................... (+) GNA Added User 04.04.2008 vain
                                                                                     break from 09.2008 on
 
----------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------
 
 3  Tino Goratsch              vyper             tinogo@blue-cable.de
 
-   Developer                                                                    (+) GNA Approved User 14.02.2007 vain
+   Developer .................................................................. (+) GNA Approved User 14.02.2007 vain
 
----------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------
 
 4  Florian Schleifenbaum      rotor             florian_schleifenbaum@web.de
 
-   Graphics                                                                     (+) GNA Added User 10.09.2006 xsign
+   Graphics ................................................................... (+) GNA Added User 10.09.2006 xsign
                                                                                 (-) GNA Removed User 28.01.2008 vain
-                                                                                    Reason: inactive, no contact
+   R                                                                                Reason: inactive, no contact
 
----------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------
 
 5  René Stalder               nachtmeister      nachtmeister@6pounder.com
 
-   Graphics                                                                     (+) GNA Approved User 28.01.2008 vain
+   Graphics ................................................................... (+) GNA Approved User 28.01.2008 vain
                                                                                     break from 07.2008 on
 
----------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------
 
 6  Pasqual Eusterfeldhus      thunderm00n
 
-   Documentation, Themes, Graphics                                              (+) GNA Approved User 02.08.2008 vain
+   Bugs, Documentation, Themes, Graphics ...................................... (+) GNA Approved User 02.08.2008 vain
                                                                                     break from 09.2008 on
 
----------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------
 
-7 Daniel Winterfeldt          rikku             rikku@gna.org
+7  Daniel Winterfeldt          rikku             rikku@gna.org
 
-  Developer                                                                     (+) GNA Approved User 10.12.2008 vain
+   Developer .................................................................. (+) GNA Approved User 10.12.2008 vain
 
--------------------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------
 
-8 B. S.                       freq77
+8  B. S.                       freq77
 
-  Developer (especially Shoutbox)                                               (+) GNA Approved User 16.08.2006 xsign
+   Developer (especially Shoutbox) ...........................................  (+) GNA Approved User 16.08.2006 xsign
                                                                                 (-) GNA Removed  User 19.03.2007 vain
-                                                                                    Reason: User request & Inactive
+   R                                                                                Reason: User request & Inactive
 
--------------------------------------------------------------------------------------------------------------------
+------------------------------------------------------------------------------------------------------------------------
 
-9
+9  Niklas Karoly              creep7
+
+   Developer .................................................................. (+) GNA Approved User 23.03.2009 vain
+
+------------------------------------------------------------------------------------------------------------------------
