- marked contributor creep7 as removed - update to the THIRD-PARTY-LIBRARIES.txt to reflect the latest changes

--- a/doc/AUTHORS.txt
+++ b/doc/AUTHORS.txt
@@ -83,5 +83,7 @@ Clansuite is developed by:
 9  Niklas Karoly              creep7
 
    Developer .................................................................. (+) GNA Approved User 23.03.2009 vain
+                                                                                (-) GNA Removed  User 09.06.2009 vain
+   R                                                                                Reason: inactive
 
 ------------------------------------------------------------------------------------------------------------------------
