--- a/modules/languages/languages/languages.po
+++ b/modules/languages/languages/languages.po
@@ -6,13 +6,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: action_admin_show.tpl:16
-msgid "Extraction Test"
-msgstr "Extraction Test"
-
 #: widget_languages.tpl:1
 msgid "Hello World"
 msgstr "Hello World"
+
+#: action_admin_scanallmodules.tpl:2
+msgid "Languages - Scan All Modules"
+msgstr "Languages - Scan All Modules"
 
 #: action_admin_show.tpl:2
 msgid "Languages - Show"
