--- a/doc/AUTHORS.txt
+++ b/doc/AUTHORS.txt
@@ -50,6 +50,8 @@ Clansuite is developed by:
    Developer .................................................................. (+) GNA Approved User 14.02.2007 vain
                                                                                     break from 11.2009 on
    I                                                                                inactive
+                                                                                (-) GNA Removed User 26.05.2010 vain
+   R                                                                                Reason: inactive
 
 ------------------------------------------------------------------------------------------------------------------------
 
@@ -67,5 +69,11 @@ Clansuite is developed by:
    Developer .................................................................. (+) GNA Approved User 10.12.2008 vain
                                                                                 (-) GNA Removed User 07.12.2009 vain
    R                                                                                Reason: inactive, user request
+
+------------------------------------------------------------------------------------------------------------------------
+
+6  Paul Brand                 paulbr            paulbr@gna.org
+
+   Developer .................................................................  (+) GNA Approved User 04.11.2010 vain
 
 ------------------------------------------------------------------------------------------------------------------------
