--- a/doc/AUTHORS.txt
+++ b/doc/AUTHORS.txt
@@ -77,3 +77,9 @@ Clansuite is developed by:
    Developer .................................................................  (+) GNA Approved User 04.11.2010 vain
 
 ------------------------------------------------------------------------------------------------------------------------
+
+7  Tobias Fichtner            tobiasfichnter    tobiasfichtner@gna.org
+
+   Developer .................................................................. (+) GNA Approved User 06.10.2011 vain
+
+------------------------------------------------------------------------------------------------------------------------
